force-app/main/default/objects/Region_Performance__c/Region_Performance__c.object-meta.xml
<CustomObject>
    <label>Region Performance</label>
    <nameField>
        <displayFormat>PR{000000}</displayFormat>
        <label>Region Performance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>