force-app/main/default/objects/Region_Performance__c/fields/Overall_Colour__c.field-meta.xml
<CustomField>
    <fullName>Overall_Colour__c</fullName>
    <formula>IMAGE( 
CASE( Overall_Status__c , 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Colour</label>
    <type>Text</type>
</CustomField>