force-app/main/default/objects/Region_Performance__c/fields/Volunteer_Statuss__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Statuss__c</fullName>
    <label>Volunteer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>