force-app/main/default/objects/Region_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Overall_Colour__c</columns>
    <columns>Facilitator_Status__c</columns>
    <columns>VC_Status__c</columns>
    <columns>Volunteer_Statuss__c</columns>
    <columns>Overall_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>